--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -64,3 +64,13 @@ body {
 .profile-dropdown .img-responsive {
     display: inline;
 }
+
+.btn-as-link {
+    background: none !important;
+    color: inherit;
+    border: none; 
+    padding: 0 !important;
+    font: inherit;
+    border-bottom: 1px solid #444; 
+    cursor: pointer;
+}
