--- a/website/templates/website/agreement/privacy.html
+++ b/website/templates/website/agreement/privacy.html
@@ -1,16 +1,108 @@
-<h2>3. Registration Data and Privacy</h2>
+<h1>Privacy Policy</h1>
 
-<p>In order to access some of the services on this site, you will be required
-to use an account and password that can be obtained by completing our online
-registration form, which requests certain information and data
-(&quot;Registration Data&quot;), and maintaining and updating your Registration
-Data as required. By registering, you agree that all information provided in
-the Registration Data is true and accurate and that you will maintain and
-update this information as required in order to keep it current, complete, and
-accurate.</p>
+<h2>What information do we collect?</h2>
+<p>
+We collect information from you when you register on this site or submit a
+form.
+</p>
+<p>
+When registering on this site you may be asked to enter your: name and e-mail
+address. You may, however, visit this site anonymously.
+</p>
 
-<p>You also grant us the right to disclose to third parties certain
-Registration Data about you. The information we obtain through your use of this
-site, including your Registration Data, is subject to our <u>Privacy
-Policy</u>, which is specifically incorporated by reference into these Terms of
-Use.</p>
+<h2>What do we use your information for?</h2>
+<p>
+Any of the information we collect from you may be used in one of the
+following ways:
+</p>
+<ul>
+<li><b>To improve this website</b><br>
+We continually strive to improve this website offerings based on the
+information and feedback we receive from you.
+</li>
+<li><b>To process submissions</b><br>
+Your information, whether public or private, will not be sold, exchanged,
+transferred, or given to any other company for any reason whatsoever, without
+your consent, other than for the express purpose of delivering the service
+requested.
+</li>
+</ul>
+
+<h2>How do we protect your information?</h2>
+<p>
+We implement a variety of security measures to maintain the safety of your
+personal information when you enter, submit, or access your personal
+information.
+</p>
+
+<h2>Do we use cookies?</h2>
+<p>
+(Cookies are small files that a site or its service provider transfers to
+your computers hard drive through your Web browser (if you allow) that enables
+the sites or service providers systems to recognize your browser and capture
+and remember certain information.)
+</p>
+<p>
+<b>Yes</b>
+</p>
+<p>
+We use cookies to compile aggregate data about site traffic and site
+interaction so that we can offer better site experiences and tools in the
+future. We may contract with third-party service providers to assist us in
+better understanding our site visitors. These service providers are not
+permitted to use the information collected on our behalf except to help us
+conduct and improve our business.
+</p>
+
+<h2>Do we disclose any information to outside parties?</h2>
+<p>
+We do not sell, trade, or otherwise transfer to outside parties your personally
+identifiable information.  This does not include trusted third parties who
+assist us in operating this website, conducting our business, or servicing you,
+so long as those parties agree to keep this information confidential. We may
+also release your information when we believe release is appropriate to comply
+with the law, enforce our site policies, or protect ours or others rights,
+property, or safety. However, non-personally identifiable visitor information
+may be provided to other parties for marketing, advertising, or other uses.
+</p>
+
+<h2>California Online Privacy Protection Act Compliance</h2>
+<p>
+Because we value your privacy we have taken the necessary precautions to be in
+compliance with the California Online Privacy Protection Act (OPPA). We
+therefore will not distribute your personal information to outside parties
+without your consent.
+</p>
+<p>
+As part of the California Online Privacy Protection Act, all users of this site
+may make any changes to their information at anytime by <a href="{% url 'website:login' %}"
+>logging into their account</a>, going to the '<a
+href="{% url 'website:editProfile' %}">Edit Profile</a>' page, and updating their information.
+</p>
+
+<h2>Childrens Online Privacy Protection Act Compliance</h2>
+<p>
+We are in compliance with the requirements of Childrens Online Privacy
+Protection Act (COPPA), as we do not collect any information from anyone under
+13 years of age. This website, products, and services are all directed to
+people who are at least 13 years old or older.
+</p>
+
+<h2>Online Privacy Policy Only</h2>
+<p>
+This online privacy policy applies only to information collected through this
+website and not to information collected offline.
+</p>
+
+<h2>Your Consent</h2>
+<p>
+By using this site, you consent to this <a style="text-decoration:none;
+color:#3C3C3C;" href="/policies/privacy.php" target="_blank">websites privacy
+policy</a>.
+</p>
+
+<h2>Changes to this Privacy Policy</h2>
+<p>
+If we decide to change this privacy policy, we will post those changes on this
+page and update the modification date at the top.
+</p>
