Add key for required field

--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -11,6 +11,7 @@
                     {{ form|crispy }}
                     <button type="button" class="btn-as-link" data-toggle="modal" data-target="#agreementModal">View Terms & Privacy Agreement</button>
                     <br><br>
+                    <p class="text-muted">* indicates required field</p>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
                     <div id="agreementModal" class="modal fade" role="dialog">
