--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -15,7 +15,7 @@
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
                     <div id="agreementModal" class="modal fade" role="dialog">
-                        <div class="modal-dialog">
+                        <div class="modal-dialog modal-lg">
                     
                             <!-- Modal content-->
                             <div class="modal-content">
