--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -9,40 +9,81 @@
                 <form class="form form-default" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button type="button" class="btn-as-link" data-toggle="modal" data-target="#agreementModal">View Terms & Privacy Agreement</button>
+                    <button type="button" class="btn-as-link" data-toggle="modal" data-target="#termsModal">View Terms & Privacy Agreement</button>
+                    <button type="button" class="btn-as-link" data-toggle="modal" data-target="#privacyModal">View Terms & Privacy Agreement</button>
                     <br><br>
                     <p class="text-muted">* indicates required field</p>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
-                    <div id="agreementModal" class="modal fade" role="dialog">
-                        <div class="modal-dialog modal-lg">
-                    
-                            <!-- Modal content-->
+                    <div id="termsModal" class="modal fade" role="dialog">
+                        <div class="modal-dialog modal-lg">                    
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     <h4 class="modal-title">Terms of Use and Privacy Agreement</h4>
                                 </div>
                                 <div class="modal-body">
-                                    <div class="header gutter"><h1>Terms of Use & Privacy Policy</h1>
-                                    <p class="lastmod">
-                                        Last modified: March 15, 2019<br>
-                                        Original Version from BOA - Mining Ultra-Large-Scale Software Repositories
-                                    </p>
-    
-                                    {% include 'website/agreement/terms.html' %}
-
-                                    {% include 'website/agreement/privacy.html' %}
-                                    
+                                    <div class="header gutter">
+                                        <h1>Terms of Use & Privacy Policy</h1>
+                                        <p class="lastmod">
+                                            Last modified: March 15, 2019<br>
+                                            Original Version from BOA - Mining Ultra-Large-Scale Software Repositories
+                                        </p>
+                                        {% include 'website/agreement/terms.html' %}                                    
                                     </div>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                 </div>
                             </div>
-                    
                         </div>
-                </div>
+                    </div>
+                    <div id="agreementModal" class="modal fade" role="dialog">
+                        <div class="modal-dialog modal-lg">                    
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Terms of Use and Privacy Agreement</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="header gutter">
+                                        <h1>Terms of Use & Privacy Policy</h1>
+                                        <p class="lastmod">
+                                            Last modified: March 15, 2019<br>
+                                            Original Version from BOA - Mining Ultra-Large-Scale Software Repositories
+                                        </p>
+                                        {% include 'website/agreement/terms.html' %}                                    
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="privacyModal" class="modal fade" role="dialog">
+                        <div class="modal-dialog modal-lg">                    
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Terms of Use and Privacy Agreement</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="header gutter">
+                                        <h1>Terms of Use & Privacy Policy</h1>
+                                        <p class="lastmod">
+                                            Last modified: March 15, 2019<br>
+                                            Original Version from BOA - Mining Ultra-Large-Scale Software Repositories
+                                        </p>
+                                        {% include 'website/agreement/privacy.html' %}                                    
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 <br>
                 <p><a href="{% url 'website:password_reset' %}">Forgot Password?</a></p>
             </div>
