--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -9,8 +9,8 @@
                 <form class="form form-default" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button type="button" class="btn-as-link" data-toggle="modal" data-target="#termsModal">View Terms & Privacy Agreement</button>
-                    <button type="button" class="btn-as-link" data-toggle="modal" data-target="#privacyModal">View Terms & Privacy Agreement</button>
+                    <button type="button" class="btn-as-link" data-toggle="modal" data-target="#termsModal">View Terms of Use Agreement</button>
+                    <button type="button" class="btn-as-link" data-toggle="modal" data-target="#privacyModal">View Privacy Policy</button>
                     <br><br>
                     <p class="text-muted">* indicates required field</p>
                     <button type="submit" class="btn btn-primary">Submit</button>
@@ -20,34 +20,11 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Terms of Use and Privacy Agreement</h4>
+                                    <h4 class="modal-title">Terms of Use Agreement</h4>
                                 </div>
                                 <div class="modal-body">
                                     <div class="header gutter">
-                                        <h1>Terms of Use & Privacy Policy</h1>
-                                        <p class="lastmod">
-                                            Last modified: March 15, 2019<br>
-                                            Original Version from BOA - Mining Ultra-Large-Scale Software Repositories
-                                        </p>
-                                        {% include 'website/agreement/terms.html' %}                                    
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="agreementModal" class="modal fade" role="dialog">
-                        <div class="modal-dialog modal-lg">                    
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Terms of Use and Privacy Agreement</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="header gutter">
-                                        <h1>Terms of Use & Privacy Policy</h1>
+                                        <h1>Terms of Use</h1>
                                         <p class="lastmod">
                                             Last modified: March 15, 2019<br>
                                             Original Version from BOA - Mining Ultra-Large-Scale Software Repositories
@@ -66,11 +43,11 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Terms of Use and Privacy Agreement</h4>
+                                    <h4 class="modal-title">Privacy Agreement</h4>
                                 </div>
                                 <div class="modal-body">
                                     <div class="header gutter">
-                                        <h1>Terms of Use & Privacy Policy</h1>
+                                        <h1>Privacy Policy</h1>
                                         <p class="lastmod">
                                             Last modified: March 15, 2019<br>
                                             Original Version from BOA - Mining Ultra-Large-Scale Software Repositories
