--- a/website/templates/website/layout.html
+++ b/website/templates/website/layout.html
@@ -91,8 +91,8 @@
 <div id="CookiesBanner" class="alert alert-info cookiebanner" style="display: none;">
     <h4>Cookies Disclaimer</h4>
     <p>
-        <a class="btn btn-primary pull-right" href="javascript:CookiesBanner.createCookiesBannerCookie();">I agree</a>
-        Our site saves small pieces of text information (cookies) on your device in order to deliver better content and for statistical purposes. You can disable the usage of cookies by changing the settings of your browser. By browsing our website without changing the browser settings you grant us permission to store that information on your device.
+        <a class="btn btn-primary pull-right" href="javascript:CookiesBanner.createCookiesBannerCookie();">I Agree</a>
+        Our site saves small pieces of text information (cookies) on your device in order to deliver better content and for statistical purposes. You can disable the usage of cookies by changing the settings of your browser. By browsing our website without changing the browser settings you grant us permission to store that information on your device. See our <a href="{% url 'website:privacy_policy' %}">Privacy Policy</a> and <a href="{% url 'website:tos' %}">Terms of Use Policy</a> for more details.
     </p>
 </div>
 </body>
