Change label for list

--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -11,7 +11,7 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th>Project Hash:</th>
+                        <th>Project Selection:</th>
                         <th>Created:</th>
                         <th>Filters:</th>
                         <th>Options:</th>
