--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -1,17 +1,29 @@
 {% extends 'website/layout.html' %}
 {% block title %}Register{% endblock %}
 {% block registeractive %}active{% endblock %}
-{% load crispy_forms_tags %}
 {% block body %}
     <div class="container-fluid">
         <div class="panel panel-default">
             <div class="panel-body">
                 <form class="form form-default" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form|crispy }}
-                    <button type="button" class="btn-as-link" data-toggle="modal" data-target="#termsModal">View Terms of Use Agreement</button>
-                    <button type="button" class="btn-as-link" data-toggle="modal" data-target="#privacyModal">View Privacy Policy</button>
-                    <br><br>
+                    {% include 'website/messages.html' %}
+                    {% include 'website/form.html' with form=form %}
+                    <div class="form-group">
+                        <label for="termsAgreement"><button type="button" class="btn-as-link" data-toggle="modal" data-target="#termsModal">I agree to this tool's terms of use</button></label>
+                        <input type="checkbox" name="termsAgreement" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="privacyAgreement"><button type="button" class="btn-as-link" data-toggle="modal" data-target="#privacyModal">I agree to this tool's privacy policy</button></label>
+                        <input type="checkbox" name="privacyAgreement" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="ageConfirmation">I am 13 years or older</label>
+                        <input type="checkbox" name="ageConfirmation" required>
+                    </div>
+                    <div class="form-group">
+
+                    </div>
                     <p class="text-muted">* indicates required field</p>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
