move modified date into the actual policy files

--- a/website/templates/website/agreement/terms.html
+++ b/website/templates/website/agreement/terms.html
@@ -1,3 +1,5 @@
+<p class="lastmod">Last modified: March 15, 2019</p>
+
 <h2>1. User's Acknowledgment and Acceptance of Terms</h2>
 
 <p>PACLab (&quot;Us&quot; or &quot;We&quot;) provides the PACLab site and various
