--- a/website/templates/website/agreement/privacy.html
+++ b/website/templates/website/agreement/privacy.html
@@ -1,3 +1,5 @@
+<p class="lastmod">Last modified: March 15, 2019</p>
+
 <h2>What information do we collect?</h2>
 <p>
 We collect information from you when you register on this site or submit a
