--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -10,15 +10,15 @@
                     {% include 'website/messages.html' %}
                     {% include 'website/form.html' with form=form %}
                     <div class="form-group">
-                        <input type="checkbox" name="termsAgreement" required>
+                        <input type="checkbox" id="termsAgreement" name="termsAgreement" required>
                         <label for="termsAgreement">I agree to the <button type="button" class="btn-as-link" data-toggle="modal" data-target="#termsModal">Terms of Use Policy</button></label>
                     </div>
                     <div class="form-group">
-                        <input type="checkbox" name="privacyAgreement" required>
+                        <input type="checkbox" id="privacyAgreement" name="privacyAgreement" required>
                         <label for="privacyAgreement">I agree to the <button type="button" class="btn-as-link" data-toggle="modal" data-target="#privacyModal">Privacy Policy</button></label>
                     </div>
                     <div class="form-group">
-                        <input type="checkbox" name="ageConfirmation" required>
+                        <input type="checkbox" id="ageConfirmation" name="ageConfirmation" required>
                         <label for="ageConfirmation">I am 13 years or older</label>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
