--- a/website/templates/website/editprofile.html
+++ b/website/templates/website/editprofile.html
@@ -95,7 +95,10 @@
 {% endblock %}
 {% block body %}
     <div class="container-fluid">
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Editing profile for {{ user.username }}</h3>
+            </div>
             <div class="panel-body">
                 <form class="form form-default" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
