Style checkboxes (updated staticfiles)

--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -60,3 +60,9 @@ body {
 .profile-dropdown .img-responsive {
     display: inline;
 }
+
+input[type="checkbox"] {
+    display: inline-block;
+    width: auto;
+    height: auto;
+}
