--- a/website/templates/website/agreement/terms.html
+++ b/website/templates/website/agreement/terms.html
@@ -145,7 +145,7 @@ warranty of any kind, either express or implied.</p>
 
 <h2>6. Intellectual Property Information</h2>
 
-<p>Copyright (c) 2012 Iowa State University, All Rights Reserved.</p>
+<p>Copyright (c) 2012 Bowling Green State University, All Rights Reserved.</p>
 
 <p>For purposes of these Terms of Use, &quot;content&quot; is defined as any
 information, data, communications, software, photos, video, graphics, music,
@@ -322,16 +322,16 @@ suspension.</p>
 <h2>14. Governing Law</h2>
 
 <p>This site (excluding any linked sites) is controlled by us from our offices
-within the Iowa, United States of America. It can be accessed from all 50
+within the Ohio, United States of America. It can be accessed from all 50
 states, as well as from other countries around the world. As each of these
-places has laws that may differ from those of Iowa, by accessing this site both
-of us agree that the statutes and laws of the State of Iowa, without regard to
+places has laws that may differ from those of Ohio, by accessing this site both
+of us agree that the statutes and laws of the State of Ohio, without regard to
 the conflicts of laws principles thereof and the United Nations Convention on
 the International Sales of Goods, will apply to all matters relating to the use
 of this site and the purchase of products and services available through this
 site. Each of us agrees and hereby submits to the exclusive personal
 jurisdiction and venue any court of competent jurisdiction within the State of
-Iowa with respect to such matters.</p>
+Ohio with respect to such matters.</p>
 
 <h2>15. Notices</h2>
 
