--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -65,23 +65,15 @@ body {
     display: inline;
 }
 
-.btn-as-link {
-    background: none !important;
-    color: inherit;
-    border: none; 
-    padding: 0 !important;
-    font: inherit;
-    border-bottom: 1px solid #444; 
-    cursor: pointer;
-}
-
-.modal-body {
-    max-height: calc(100vh - 20vh);
-    overflow-y: auto;
-}
-
+/* fix checkboxes so labels are next to them */
 input[type="checkbox"] {
     display: inline-block;
     width: auto;
     height: auto;
+}
+
+/* allow scrolling modals to scale properly */
+.modal-body {
+    max-height: 80vh;
+    overflow-y: auto;
 }
