--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -16,7 +16,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Terms of Use Agreement</h4>
+                                    <h4 class="modal-title">Terms of Use</h4>
                                 </div>
                                 <div class="modal-body">
                                     <div class="header gutter">
@@ -34,7 +34,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Privacy Agreement</h4>
+                                    <h4 class="modal-title">Privacy Policy</h4>
                                 </div>
                                 <div class="modal-body">
                                     <div class="header gutter">
