--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block title %}Home{% endblock %}
 {% block body %}
     <div class="container">
