--- a/website/templates/website/papers.html
+++ b/website/templates/website/papers.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block title %}Papers{% endblock %}
 {% block papersactive %}active{% endblock %}
 {% block body %}
