--- a/website/templates/website/people.html
+++ b/website/templates/website/people.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block title %}People{% endblock %}
 {% block peopleactive %}active{% endblock %}
 {% block body %}
