--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block title %}Register{% endblock %}
 {% block registeractive %}active{% endblock %}
 {% block body %}
