--- a/website/templates/website/reset/passwordResetConfirm.html
+++ b/website/templates/website/reset/passwordResetConfirm.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block title %}Password Reset Confirm{% endblock %}
 {% block profileactive %}active{% endblock %}
 {% block body %}
