--- a/website/templates/website/activate_email_confirm.html
+++ b/website/templates/website/activate_email_confirm.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block title %}Activate Email Confirmation{% endblock %}
 {% block body %}
     <div class="container-fluid">
