--- a/website/templates/website/create_normal.html
+++ b/website/templates/website/create_normal.html
@@ -1,4 +1,4 @@
-{% extends "website/layout.html" %}
+{% extends "website/base.html" %}
 {% block title %}Project Selection{% endblock %}
 {% block body %}
 <div class="container">
