--- a/website/templates/website/funding.html
+++ b/website/templates/website/funding.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block title %}Funding{% endblock %}
 {% block fundingactive %}active{% endblock %}
 {% block body %}
