--- a/website/templates/website/login.html
+++ b/website/templates/website/login.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block title %}{% if form.email %}Register{% else %}Login{% endif %}{% endblock %}
 {% block registeractive %}
     {% if form.email %}
