--- a/website/templates/website/reset/passwordResetDone.html
+++ b/website/templates/website/reset/passwordResetDone.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block title %}Password Reset Done{% endblock %}
 {% block body %}
     <div class="container-fluid">
