rename editProfile url to edit_profile

--- a/website/templates/website/agreement/privacy.html
+++ b/website/templates/website/agreement/privacy.html
@@ -77,7 +77,7 @@ without your consent.
 As part of the California Online Privacy Protection Act, all users of this site
 may make any changes to their information at anytime by <a href="{% url 'website:login' %}"
 >logging into their account</a>, going to the '<a
-href="{% url 'website:editProfile' %}">Edit Profile</a>' page, and updating their information.
+href="{% url 'website:edit_profile' %}">Edit Profile</a>' page, and updating their information.
 </p>
 
 <h2>Childrens Online Privacy Protection Act Compliance</h2>
