fix bad link in privacy policy

--- a/website/templates/website/agreement/privacy.html
+++ b/website/templates/website/agreement/privacy.html
@@ -96,8 +96,7 @@ website and not to information collected offline.
 
 <h2>Your Consent</h2>
 <p>
-By using this site, you consent to this <a style="text-decoration:none;
-color:#3C3C3C;" href="/policies/privacy.php" target="_blank">websites privacy
+By using this site, you consent to this websites <a href="{% url 'website:privacy_policy' %}">privacy
 policy</a>.
 </p>
 
