remove link to itself

--- a/website/templates/website/agreement/privacy.html
+++ b/website/templates/website/agreement/privacy.html
@@ -96,8 +96,7 @@ website and not to information collected offline.
 
 <h2>Your Consent</h2>
 <p>
-By using this site, you consent to this websites <a href="{% url 'website:privacy_policy' %}">privacy
-policy</a>.
+By using this site, you consent to this website's privacy policy.
 </p>
 
 <h2>Changes to this Privacy Policy</h2>
