--- a/website/templates/website/email_verification_email.html
+++ b/website/templates/website/email_verification_email.html
@@ -3,5 +3,5 @@ Hi {{ user.username }},
 
 Please click the following link to finalize your PAClab registration:
 
-http://{{ domain }}{% url 'website:activate_account' uidb64=uid token=token %}
+http://{{ domain }}{% url 'website:verify_email' uidb64=uid token=token %}
 {% endautoescape %}
