code cleanup for filter default values ajax

--- a/website/templates/website/create_normal.html
+++ b/website/templates/website/create_normal.html
@@ -73,9 +73,9 @@ function cloneMore(selector, prefix) {
     $(selector).after(newElement);
     var conditionRow = $('.form-row:not(:last)');
     conditionRow.find('.btn.add-form-row')
-    .removeClass('btn-success').addClass('btn-danger')
-    .removeClass('add-form-row').addClass('remove-form-row')
-    .html('-');
+        .removeClass('btn-success').addClass('btn-danger')
+        .removeClass('add-form-row').addClass('remove-form-row')
+        .html('-');
     return false;
 }
 function deleteForm(prefix, btn) {
@@ -103,26 +103,15 @@ $(document).on('click', '.remove-form-row', function(e){
     return false;
 });
 $('select').change(function (){
-    var text = $("option:selected", this).text();
+    var val = $("option:checked", this).val();
     current_input = this;
     $.ajax({
-        url: '/ajax/data_default/',
+        url: '/api/filter_default/',
         data: {
-            'text': text
+            'id': val
         },
         success: function (data) {
-            var values = $.map(data, function(value, key) { return value });
-            var val_type = values[0];
-            var default_val = values[1];
-            if(val_type==="String") {
-                $(current_input).nextAll('input').first().val(default_val);
-            }
-            else if(val_type==="Integer") {
-                $(current_input).nextAll('input').first().val(default_val);
-            }
-            else {
-                $(current_input).nextAll('input').first().val(default_val);
-            }
+            $(current_input).nextAll('input').first().val(data.default);
         }
     });
 });
