--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" type="text/css" href="{% static 'hijack/hijack-styles.css' %}" />
     {% endif %}
     <link rel="stylesheet" type="text/css" href="{% static 'website/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'website/fs-modal.min.css' %}">
     {% block style %}{% endblock %}
 </head>
 <body>
@@ -80,6 +81,7 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha384-Dziy8F2VlJQLMShA6FHWNul/veM9bCkRUaLqr199K94ntO5QUrLJBEbYegdSkkqX" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js" integrity="sha384-vhJnz1OVIdLktyixHY4Uk3OHEwdQqPppqYR8+5mjsauETgLOcEynD9oPHhhz18Nw" crossorigin="anonymous"></script>
 <script type="text/javascript" src="{% static 'website/javascript.js' %}"></script>
+<script type="text/javascript" src="{% static 'website/fs-modal.min.js' %}"></script>
 {% block script %}{% endblock %}
 <footer class="footer">
     <p class="text-muted">
