--- a/website/templates/website/agreement/privacy.html
+++ b/website/templates/website/agreement/privacy.html
@@ -1,4 +1,4 @@
-<p class="lastmod">Last modified: March 15, 2019</p>
+<p class="lastmod">Last modified: May 4, 2019</p>
 
 <h2>What information do we collect?</h2>
 <p>
@@ -7,7 +7,7 @@ form.
 </p>
 <p>
 When registering on this site you may be asked to enter your: name and e-mail
-address. You may, however, visit this site anonymously.
+address. You may, however, visit this site anonymously without registering.
 </p>
 
 <h2>What do we use your information for?</h2>
@@ -17,7 +17,7 @@ following ways:
 </p>
 <ul>
 <li><b>To improve this website</b><br>
-We continually strive to improve this website offerings based on the
+We continually strive to improve this website's offerings based on the
 information and feedback we receive from you.
 </li>
 <li><b>To process submissions</b><br>
@@ -63,7 +63,7 @@ so long as those parties agree to keep this information confidential. We may
 also release your information when we believe release is appropriate to comply
 with the law, enforce our site policies, or protect ours or others rights,
 property, or safety. However, non-personally identifiable visitor information
-may be provided to other parties for marketing, advertising, or other uses.
+may be provided to other parties for research or other uses.
 </p>
 
 <h2>California Online Privacy Protection Act Compliance</h2>
@@ -76,13 +76,14 @@ without your consent.
 <p>
 As part of the California Online Privacy Protection Act, all users of this site
 may make any changes to their information at anytime by <a href="{% url 'website:login' %}"
->logging into their account</a>, going to the '<a
-href="{% url 'website:edit_profile' %}">Edit Profile</a>' page, and updating their information.
+>logging into their account</a>, going to the <a
+href="{% url 'website:edit_profile' %}">Edit Profile</a> page, and updating
+their information.
 </p>
 
 <h2>Childrens Online Privacy Protection Act Compliance</h2>
 <p>
-We are in compliance with the requirements of Childrens Online Privacy
+We are in compliance with the requirements of the Childrens Online Privacy
 Protection Act (COPPA), as we do not collect any information from anyone under
 13 years of age. This website, products, and services are all directed to
 people who are at least 13 years old or older.
