--- a/website/templates/website/agreement/terms.html
+++ b/website/templates/website/agreement/terms.html
@@ -1,4 +1,4 @@
-<p class="lastmod">Last modified: March 15, 2019</p>
+<p class="lastmod">Last modified: May 4, 2019</p>
 
 <h2>1. User's Acknowledgment and Acceptance of Terms</h2>
 
@@ -60,8 +60,8 @@ accurate.</p>
 
 <p>You also grant us the right to disclose to third parties certain
 Registration Data about you. The information we obtain through your use of this
-site, including your Registration Data, is subject to our <u>Privacy
-Policy</u>, which is specifically incorporated by reference into these Terms of
+site, including your Registration Data, is subject to our <a href="{% url 'website:privacy_policy' %}">Privacy
+Policy</a>, which is specifically incorporated by reference into these Terms of
 Use.</p>
 
 <h2>4. Conduct on Site</h2>
@@ -145,7 +145,7 @@ warranty of any kind, either express or implied.</p>
 
 <h2>6. Intellectual Property Information</h2>
 
-<p>Copyright (c) 2012 Bowling Green State University, All Rights Reserved.</p>
+<p>Copyright (c) 2019 Bowling Green State University, All Rights Reserved.</p>
 
 <p>For purposes of these Terms of Use, &quot;content&quot; is defined as any
 information, data, communications, software, photos, video, graphics, music,
@@ -181,7 +181,8 @@ logo, and/or the name of PAClab or its Affiliates.</p>
 
 <h2>7. Unauthorized Use of Materials</h2>
 
-<p>Subject to our Privacy Policy, any communication or material that you
+<p>Subject to our <a href="{% url 'website:privacy_policy' %}">Privacy
+Policy</a>, any communication or material that you
 transmit to this site or to us, whether by electronic mail, post, or other
 means, for any reason, will be treated as non-confidential and non-proprietary.
 While you retain all rights in such communications or material, you grant us
@@ -215,19 +216,6 @@ DATE, AND WE MAKE NO COMMITMENT TO UPDATE SUCH MATERIALS OR SERVICES.</p>
 MATERIALS THROUGH THIS SITE IS DONE AT YOUR OWN DISCRETION AND RISK AND WITH
 YOUR AGREEMENT THAT YOU WILL BE SOLELY RESPONSIBLE FOR ANY DAMAGE TO YOUR
 COMPUTER SYSTEM OR LOSS OF DATA THAT RESULTS FROM SUCH ACTIVITIES.</p>
-
-<p>Through your use of the site, you may have the opportunities to engage in
-commercial transactions with other users and vendors. You acknowledge that all
-transactions relating to any merchandise or services offered by any party,
-including, but not limited to the purchase terms, payment terms, warranties,
-guarantees, maintenance and delivery terms relating to such transactions, are
-agreed to solely between the seller or purchaser of such merchandize and
-services and you. WE MAKE NO WARRANTY REGARDING ANY TRANSACTIONS EXECUTED
-THROUGH, OR IN CONNECTION WITH THIS SITE, AND YOU UNDERSTAND AND AGREE THAT
-SUCH TRANSACTIONS ARE CONDUCTED ENTIRELY AT YOUR OWN RISK. ANY WARRANTY THAT IS
-PROVIDED IN CONNECTION WITH ANY PRODUCTS, SERVICES, MATERIALS, OR INFORMATION
-AVAILABLE ON OR THROUGH THIS SITE FROM A THIRD PARTY IS PROVIDED SOLELY BY SUCH
-THIRD PARTY, AND NOT BY US OR ANY OTHER OF OUR AFFILIATES.</p>
 
 <p>Content available through this site often represents the opinions and
 judgments of an information provider, site user, or other person or entity not
@@ -306,7 +294,7 @@ information made in connection with this site is void where prohibited.</p>
 <p>You agree that we may, in our sole discretion, terminate or suspend your
 access to all or part of the site with or without notice and for any reason,
 including, without limitation, breach of these Terms of Use. Any suspected
-fraudulent, abusive or illegal activity may be grounds for terminating your
+fraudulent, abusive, or illegal activity may be grounds for terminating your
 relationship and may be referred to appropriate law enforcement
 authorities.</p>
 
@@ -322,7 +310,7 @@ suspension.</p>
 <h2>14. Governing Law</h2>
 
 <p>This site (excluding any linked sites) is controlled by us from our offices
-within the Ohio, United States of America. It can be accessed from all 50
+within Ohio, United States of America. It can be accessed from all 50
 states, as well as from other countries around the world. As each of these
 places has laws that may differ from those of Ohio, by accessing this site both
 of us agree that the statutes and laws of the State of Ohio, without regard to
@@ -337,7 +325,8 @@ Ohio with respect to such matters.</p>
 
 <p>All notices to a party shall be in writing and shall be made either via
 email or conventional mail. Notices to us must be sent to the attention of
-Customer Service at complaints@PAClab, if by email, or at PAClab Ames, IA if by
+<a href="{% url 'website:people' %}">an admin</a>, if by email, or to PAClab,
+221 Hayes Hall, Bowling Green State University, Bowling Green, OH 43402 if by
 conventional mail. Notices to you may be sent to the address supplied by you as
 part of your Registration Data. In addition, we may broadcast notices or
 messages through the site to inform you of changes to the site or other matters
