minor fix to modal

--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -12,8 +12,8 @@
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
                 <div tabindex="-1" id="termsModal" class="modal fade modal-fullscreen modal-scrollable" role="dialog">
-                    <div class="modal-dialog">
-                        <div class="modal-content" role="document">
+                    <div class="modal-dialog modal-lg" role="document">
+                        <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-mobile-text="Close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                 <h4 class="modal-title">Terms of Use</h4>
